--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	const users = document.querySelector('#users')
 	const rooms = document.querySelector('#rooms')
 
-    let socket = io.connect('http://localhost:8080')
+    let socket = io.connect()
 
 	socket.on('connect', function () {
 		console.log('Connected')
