--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	socket.on('connect', function () {
 		console.log('Connected')
+        socket.emit('refresh')
 	})
 
 	socket.on('userList', function (data) {
@@ -34,15 +35,6 @@
         rooms.innerHTML = JSON.stringify(data, null, 2)
 	})
 
-	function getParameterByName(name, url) {
-		if (!url) url = window.location.href;
-		name = name.replace(/[\[\]]/g, "\\$&");
-		var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
-			results = regex.exec(url);
-		if (!results) return null;
-		if (!results[2]) return '';
-		return decodeURIComponent(results[2].replace(/\+/g, " "));
-	}
 </script>
 
 </body>
